fixed the spacing on the newsletter

--- a/SITE/sass/main.scss
+++ b/SITE/sass/main.scss
@@ -625,7 +625,7 @@ header h1 {
 		}
 	}
 	.newsletter {
-		width: 48%;
+		width: 51%;
 		> .inner {
 			padding: 0 1em;
 		}
